--- a/index.html
+++ b/index.html
@@ -40,24 +40,29 @@
 
 <div id="menu" class="fas fa-bars"></div>
 
-<!-- home section starts  -->
+<!-- welcome section starts  -->
 
-<section class="home" id="home">
+<section class="welcome" id="welcome">
 
     <h3>HELLO!</h3>
     <h1>I'M <span>David Niculita</span></h1>
     <p> I'm a third year Computer Science student who 
         grew up loving two things: football, technology and problem-solving games. I've always known that 
-        if football didn't work out for me that I'd take up a technology focused course.
-        I majored in computer science. The fancy code we see in movies and just the 
-        whole idea of how it works has always fascinated me and I've always wanted to know and learn more. 
+        if football didn't work out for me that I would take up a technology focused course.
+        The fancy code we see in movies and just the whole idea of how it works has always fascinated me 
+        and I've always wanted to know and learn more. 
         I discovered that I was good at problem solving like, algorithms and I really enjoy it. As a person 
         who doesn't like when a problem I am facing isn't solved, I've always wanted to 
-        solve the problem and achieve the goal that I've set for myself.<br/>
-        <br/>Apart from CS and my background I love travelling with my friends and exploring new cities
-        and new cultures around the world. I've been to 20+ different countries - USA, Spain, Italy, UAE, Slovenia, Germany and many more.
-        For me its really the experience and memories that I love to adventure & make. I played for 3/4 different
-        clubs from the age of 10-18 years. I love sports and I tend to always keep up with being active 
+        solve the problem and achieve the goal that I've set for myself.
+        <br>
+        <br>
+        Apart from Computer Science, I love travelling and exploring new cities
+        and new cultures around the world. I have been to 20+ different countries - USA, UAE, Spain, Italy, Slovenia, Germany and many more.
+        <br>
+        <br>
+        For me its really the experience and memories plus I love a good adventure.
+        I played for 3/4 different clubs from the age of 10-18 years. 
+        I love sports and I tend to always keep up with being active 
         either sometimes i'd join gym for a period of time or take my dog out for jogs! which is 
         another way for me to enjoy some time and have fun.
     </p>
@@ -65,7 +70,7 @@
 
 </section>
 
-<!-- home section ends -->
+<!-- welcome section ends -->
 
 <!-- about section starts  -->
 
@@ -206,8 +211,8 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
+            <h3> <i class="fab fa-linkedin-in"></i> <a href= "https://www.linkedin.com/in/david-n-308a9a134/"> Check out my LinkedIn! </a> </h3>
             <h3> <i class="fas fa-envelope"></i> david_niculita@yahoo.com </h3>
-            <h3> <i class="fas fa-phone"></i> ADD LINKEDIN </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> Dublin, Ireland - GMT +00:00 </h3>
         </div>
 
@@ -232,7 +237,7 @@
 
 <!-- scroll top button  -->
 
-<a href="#home" class="top">
+<a href="#welcome" class="top">
     <img src="images/scroll-top-img.png" alt="">
 </a>
 
