added some headings and chaged text

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <br>
         <br>
         For me its really the experience and memories plus I love a good adventure.
-        I played for 3/4 different clubs from the age of 10-18 years. 
-        I love sports and I tend to always keep up with being active 
-        either sometimes i'd join gym for a period of time or take my dog out for jogs! which is 
-        another way for me to enjoy some time and have fun.
+        I also try to stay active. I played for 3/4 different clubs from the age of 10-18 years. 
+        I love sports and I tend to always keep up with being active, I am a member of my local 
+        gym and also a member of my local swimming club. I have a lot of fun with sport as it has 
+        been part of my life from a young age. 
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
@@ -84,9 +84,9 @@
         <h3> <span> Name : </span> David Niculita </h3>
         <h3> <span> Qualification : </span> BSc Computer Science</h3>
         <h3> <span> Profession : </span> Software Developer/Engineer</h3>
-        <h3> <span> Language : </span> English, Romanian & German </h3>
+        <h3> <span> Languages : </span> English, Romanian & German </h3>
         <h3> <span> Nationality : </span> Irish </h3>
-        <a href="" download=""><button class="btn"  style="color: #7800f8">Download CV <i class="fas fa-download"></i> </button></a>
+        <a href="https://drive.google.com/file/d/1ZPfqi7MrvV0h95ag1rAtfebMuW5-fHQ8/view?usp=sharing" download="https://drive.google.com/file/d/1ZPfqi7MrvV0h95ag1rAtfebMuW5-fHQ8/view?usp=sharing"><button class="btn"  style="color: #7800f8">Download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
@@ -166,8 +166,10 @@
 
 <h1 class="heading"> my <span>portfolio</span> </h1>
 
-<div class="box-container">
+    <h3 class="sub-heading">Some of my favourite places that I have visited!</h3>
 
+<div class="box-container">
+    
     <div class="box">
         <img src=".\images\giantscauseway.jpeg" alt="Giant's Causeway - Ireland">
     </div>
