--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h3>HELLO!</h3>
     <h1>I'M <span>David Niculita</span></h1>
     <p> I'm a third year Computer Science student who 
-        grew up loving two things: football, technology and problem-solving games. I've always known that 
+        grew up loving three things: football, technology and problem-solving games. I've always known that 
         if football didn't work out for me that I would take up a technology focused course.
         The fancy code we see in movies and just the whole idea of how it works has always fascinated me 
         and I've always wanted to know and learn more. 
