changed linkedin colour

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fab fa-linkedin-in"></i> <a href= "https://www.linkedin.com/in/david-n-308a9a134/"> Check out my LinkedIn! </a> </h3>
+            <h3> <i class="fab fa-linkedin-in"></i> <a href= "https://www.linkedin.com/in/david-n-308a9a134/" style="color: #7800f8"> Check out my LinkedIn! </a> </h3>
             <h3> <i class="fas fa-envelope"></i> david_niculita@yahoo.com </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> Dublin, Ireland - GMT +00:00 </h3>
         </div>
