--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+
+    <!-- Bootstrap CSS -->
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
@@ -166,6 +171,33 @@
 
 <h1 class="heading"> my <span>portfolio</span> </h1>
 
+    <h3 class="sub-heading">Check out some of my most interesting projects!</h3>
+
+<div class="project-container">
+
+    <div class="project-card">
+        <div class="card-image car-1"></div>
+        <h2>Project 1</h2>
+        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</p>
+        <a href="#"><button class="card-btn">READ MORE</button></a>
+    </div>
+
+    <div class="project-card">
+        <div class="card-image car-2"></div>
+        <h2>Project 2</h2>
+        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</p>
+        <a href="#"><button class="card-btn">READ MORE</button></a>
+    </div>
+
+    <div class="project-card">
+        <div class="card-image car-3"></div>
+        <h2>Project 3</h2>
+        <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</p>
+        <a href="#"><button class="card-btn">READ MORE</button></a>
+    </div>
+
+</div>
+
     <h3 class="sub-heading">Some of my favourite places that I have visited!</h3>
 
 <div class="box-container">
@@ -195,6 +227,8 @@
     </div>
 
 </div>
+
+
 
 </section>
 
