added more info for projects

--- a/index.html
+++ b/index.html
@@ -177,23 +177,23 @@
 
     <div class="project-card">
         <div class="card-image car-1"></div>
-        <h2>Project 1</h2>
+        <h2>Music Visuals with Java</h2>
         <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</p>
-        <a href="#"><button class="card-btn">READ MORE</button></a>
+        <a href="https://github.com/DJN2122/OOP-2021-22-Assignment"><button class="card-btn">Link to GitHub Repo</button></a>
     </div>
 
     <div class="project-card">
         <div class="card-image car-2"></div>
-        <h2>Project 2</h2>
+        <h2>Django - Web Framework</h2>
         <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</p>
-        <a href="#"><button class="card-btn">READ MORE</button></a>
+        <a href="https://github.com/DJN2122/SDEV2004"><button class="card-btn">Link to GitHub Repo</button></a>
     </div>
 
     <div class="project-card">
         <div class="card-image car-3"></div>
-        <h2>Project 3</h2>
+        <h2>BFS & DFS Algorithms</h2>
         <p>Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</p>
-        <a href="#"><button class="card-btn">READ MORE</button></a>
+        <a href="https://github.com/DJN2122/BFS-DFS-Algorithms"><button class="card-btn">Link to GitHub Repo</button></a>
     </div>
 
 </div>
