--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
         <div class="box">
             <span>6 Months</span>
             <h3>Internship Experience<br/>
-                EY<br/>(Technology Consultant),<br/>
-                AIB<br/>(Software Tester),<br/>
+                EY<br/>(Technology Consultant)<br/>
+                AIB<br/>(Software Tester)<br/>
             </h3>
         </div>
 
         <div class="box">
-            <span>+10</span>
+            <span>10+</span>
             <h3>Projects completed<br/> 
                 Check<a href="https://github.com/DJN2122" style="color: #7800f8"> Github</a>
             </h3>
@@ -119,7 +119,7 @@
         </div>
 
         <div class="box">
-            <span>+10 Awards</span>
+            <span>10+ Awards</span>
             <h3>
            		Football,<br/>
 		   		Swimming,<br/>
@@ -149,14 +149,29 @@
         <i class="fas fa-graduation-cap"></i>
         <span>2013-2018</span>
         <h3>Leaving Certificate</h3>
-        <p>Castleknock<br/>Community<br/>College</p>
+        <p>Castleknock Community College<br/><br/>Extracurricular activities:<br/>
+            Mentor for 1st year students<br/>
+            Class representative<br/>
+            Studied LCVP & Romanian<br/>
+            Part of the schhol football team
+        </p>
+    </div>
+
+    <div class="box">
+        <i class="fas fa-solid fa-plane"></i>
+        <span>2018-2020</span>
+        <h3>Education Break</h3>
+        <p>Worked in Nike Store Dublin:<br/>Improved my communication, sales and customer service skills<br/>
+        <br/>
+        Travelled for 6+ months:<br/>Grained a lot of valuable lessons and experienced many different cultures
+        </p>
     </div>
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2020-2024</span>
         <h3>Bachelors Science Degree</h3>
-        <p>Technological University Dublin<br/><br/>Computer Science</p>
+        <p>Technological University Dublin<br/>BSc Computer Science<br/><br/>In 2023, I will study one semester abroad in Germany, as part of my course</p>
     </div>
 
 </div>
