added more info

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <h3>HELLO!</h3>
     <h1>I'M <span>David Niculita</span></h1>
-    <p> I'm a third year Computer Science student who grew up loving three things: sport, technology and problem-solving games.
+    <p> I am a third year Computer Science student who grew up loving three things: sport, technology and problem-solving games.
         What really got me into software developing/engineering was a movie that I watched when I was 12 years old, 
         called 'The Social Network'. I thought this movie was unbelievable, and I believe this movie put the thought of "coding" 
         in my mind which is what made me pick Computer Science in University.
@@ -65,7 +65,7 @@
         I have been to 20+ different countries - USA, UAE, Spain, Italy, Slovenia, Germany and many more.
         <br>
         <br>
-        For me its really the experience and memories, plus I love a good adventure.
+        For me, its really the experience and memories, plus I love a good adventure.
         I also try to stay active. I love sports! I am a member of my local gym and also a member of my local football club.
         I really enjoy sport as it has been a part of my life from a young age.
     </p>
@@ -106,6 +106,16 @@
             <span>10+</span>
             <h3>Projects completed<br/><br/>
                 Check my<a href="https://github.com/DJN2122" style="color: #7800f8"> Github</a>
+            </h3>
+        </div>
+
+        <div class="box">
+            <span>Hobbies</span>
+            <h3>
+                Sports,
+                Travelling,
+                Reading & Writing<br/><br/>
+                In my free time, I continue to work on personal projects and have many ideas, waiting to be realized!
             </h3>
         </div>
 
@@ -254,6 +264,7 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
+            <h3> <i class="fab fa-github"></i> <a href= "https://github.com/DJN2122" style="color: #7800f8"> Check out my GitHub! </a> </h3>
             <h3> <i class="fab fa-linkedin-in"></i> <a href= "https://www.linkedin.com/in/david-n-308a9a134/" style="color: #7800f8"> Check out my LinkedIn! </a> </h3>
             <h3> <i class="fas fa-envelope"></i> david_niculita@yahoo.com </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> Dublin, Ireland - GMT +00:00 </h3>
@@ -272,6 +283,8 @@
     </form>
 
 </div>
+
+<h3 class="sub-heading">Copyright © David Niculita 2022</h3>
 
 </section>
 
