implemented simple back-to-top btn

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
 
 <!-- contact section ends -->
 
-
 <!-- scroll top button  -->
+<a class="gotopbtn" href="#welcome"> <i class="fas fa-arrow-up"></i> </a>
 
 <!-- jquery cdn link  -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
