--- a/index.html
+++ b/index.html
@@ -53,20 +53,18 @@
     <h1>I'M <span>David Niculita</span></h1>
     <p> I am a third year Computer Science student who grew up loving three things: sport, technology and problem-solving games.
         What really got me into software developing/engineering was a movie that I watched when I was 12 years old, 
-        called 'The Social Network'. I thought this movie was unbelievable, and I believe this movie put the thought of "coding" 
+        called "The Social Network". I thought this movie was unbelievable, and I believe this movie put the thought of "coding" 
         in my mind which is what made me pick Computer Science in University.
         The code we see in movies and just the whole idea of how it works and how it affects the world we live in today 
         always fascinated me and I've always wanted to learn more as I am a very curious person. 
-        I discovered that I was good at problem solving and I really enjoy it. As a person who doesn't like when a problem
-        I am facing isn't solved, I always want to solve the problem and achieve the goal that I've set for myself.
         <br>
         <br>
         Apart from Computer Science, I love travelling and exploring new cities and new cultures around the world. 
         I have been to 20+ different countries - USA, UAE, Spain, Italy, Slovenia, Germany and many more.
         <br>
         <br>
-        For me, its really the experience and memories, plus I love a good adventure.
-        I also try to stay active. I love sports! I am a member of my local gym and also a member of my local football club.
+        For me, it's the experience and memories, plus I love a good adventure.
+        I also try to stay active, I love sports! I am a member of my local gym and also a member of my local football club.
         I really enjoy sport as it has been a part of my life from a young age.
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
@@ -284,7 +282,7 @@
 
 </div>
 
-<h3 class="sub-heading">Copyright © David Niculita 2022</h3>
+    <h3 class="sub-heading">Copyright © David Niculita 2022</h3>
 
 </section>
 
