changed welcome text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h3>HELLO!</h3>
     <h1>I'M <span>David Niculita</span></h1>
     <p> I am a third year Computer Science student who grew up loving three things: sport, technology and problem-solving games.
-        What really got me into software developing/engineering was a movie that I watched when I was 12 years old, 
+        What really got me into software developing was a movie that I watched when I was 12 years old, 
         called "The Social Network". I thought this movie was unbelievable, and I believe this movie put the thought of "coding" 
         in my mind which is what made me pick Computer Science in University.
         The code we see in movies and just the whole idea of how it works and how it affects the world we live in today 
@@ -60,10 +60,10 @@
         <br>
         <br>
         Apart from Computer Science, I love travelling and exploring new cities and new cultures around the world. 
-        I have been to 20+ different countries - USA, UAE, Spain, Italy, Slovenia, Germany and many more.
+        I have been to 20+ different countries - USA, UAE, Spain, Italy, Slovenia, Germany and many more. For me, 
+        it's the experience and memories, plus I love a good adventure.
         <br>
         <br>
-        For me, it's the experience and memories, plus I love a good adventure.
         I also try to stay active, I love sports! I am a member of my local gym and also a member of my local football club.
         I really enjoy sport as it has been a part of my life from a young age.
     </p>
