changed welcome text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <section class="welcome" id="welcome">
 
     <h3>HELLO!</h3>
-    <h1>I'M <span>David Niculita</span></h1>
+    <h1>I'm <span>David Niculita</span></h1>
     <p> I am a third year Computer Science student who grew up loving three things: sport, technology and problem-solving games.
         What really got me into software developing was a movie that I watched when I was 12 years old, 
         called "The Social Network". I thought this movie was unbelievable, and I believe this movie put the thought of "coding" 
@@ -64,7 +64,7 @@
         it's the experience and memories, plus I love a good adventure.
         <br>
         <br>
-        I also try to stay active, I love sports! I am a member of my local gym and also a member of my local football club.
+        I also try to stay active! I am a member of my local gym and also a member of my local football club.
         I really enjoy sport as it has been a part of my life from a young age.
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
