--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <!-- contact section ends -->
 
 <!-- scroll top button  -->
-<a class="gotopbtn" href="#welcome"> <i class="fas fa-arrow-up"></i> </a>
+<a class="gotopbtn" href="#welcome"> <i class="fas fa-chevron-circle-up"></i> </a>
 
 <!-- jquery cdn link  -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
