--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h3> <span> Profession : </span> Software Developer/Engineer</h3>
         <h3> <span> Languages : </span> English, Romanian & German </h3>
         <h3> <span> Nationality : </span> Irish </h3>
-        <a href="https://drive.google.com/file/d/1U9NkTUTe-ZVvUWK9C6AxkcG4lJ2X7c1D/view?usp=sharing" download="https://drive.google.com/file/d/1U9NkTUTe-ZVvUWK9C6AxkcG4lJ2X7c1D/view?usp=sharing"><button class="btn"  style="color: #7800f8">Download CV <i class="fas fa-download"></i> </button></a>
+        <a href="https://drive.google.com/file/d/1U9NkTUTe-ZVvUWK9C6AxkcG4lJ2X7c1D/view?usp=sharing" download="https://drive.google.com/file/d/1U9NkTUTe-ZVvUWK9C6AxkcG4lJ2X7c1D/view?usp=sharing"><button class="btn"  style="color: #7800f8">View my CV<i class="fab fa-google-drive"></i> </button></a>
     </div>
 
     <div class="counter">
