--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             Mentor for 1st year students<br/>
             Class representative<br/>
             Studied LCVP & Romanian<br/>
-            Part of the schhol football team
+            Part of the school football team
         </p>
     </div>
 
