changed some links

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="box">
             <span>10+</span>
             <h3>Projects completed<br/><br/>
-                Check my<a href="https://github.com/DJN2122" style="color: #7800f8"> Github</a>
+                <a href="https://github.com/DJN2122" style="color: #7800f8; text-decoration: underline;">GitHub</a>
             </h3>
         </div>
 
