added a new project

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
         <a href="https://github.com/DJN2122/BFS-DFS-Algorithms"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
     </div>
 
+    <div class="project-card">
+        <div class="card-image car-4"></div>
+        <h2>Pygame Space Invader</h2>
+        <p>This project is a simple retro style game called "Space Invader". I created this game with the Python programming language and the pygame module built into Python which is designed for writing video games.
+            It is a game in which a spaceship has to destroy other spaceships in order to progress.</p>
+        <a href="https://github.com/DJN2122/Pygame-Space-Invader"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
+    </div>
+
 </div>
 
     <h3 class="sub-heading">Some of my favourite places that I have visited!</h3>
