--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
-        <span>2020-2024</span>
+        <span>2020-2025</span>
         <h3>Bachelors Science Degree</h3>
-        <p>Technological University Dublin<br/>BSc Computer Science<br/><br/>In 2023, I will study one semester abroad in Germany, as part of my course</p>
+        <p>Technological University Dublin<br/>BSc Computer Science<br/><br/>In 2023, I will work one year in industry.</p>
     </div>
 
 </div>
