--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <h3>HELLO!</h3>
     <h1>I'm <span>David Niculita</span></h1>
-    <p> I am a third year Computer Science student who grew up loving three things: sport, technology and problem-solving games.
+    <p> I am a third year Computer Science student who grew up loving three things: sports, technology and problem-solving games.
         What really got me into software developing was a movie that I watched when I was 12 years old, 
         called "The Social Network". I thought this movie was unbelievable, and I believe this movie put the thought of "coding" 
         in my mind which is what made me pick Computer Science in University.
@@ -170,7 +170,7 @@
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
-        <span>2020-2025</span>
+        <span>2020-2024</span>
         <h3>Bachelors Science Degree</h3>
         <p>Technological University Dublin<br/>BSc Computer Science<br/><br/>In 2023, I will work one year in industry.</p>
     </div>
