added more info and change of colour

--- a/index.html
+++ b/index.html
@@ -53,21 +53,10 @@
 
     <h3>HELLO!</h3>
     <h1>I'm <span>David Niculita</span></h1>
-    <p> I am a third year Computer Science student who grew up loving three things: sports, technology and problem-solving games.
-        What really got me into software developing was a movie that I watched when I was 12 years old, 
-        called "The Social Network". I thought this movie was unbelievable, and I believe this movie put the thought of "coding" 
-        in my mind which is what made me pick Computer Science in University.
-        The code we see in movies and just the whole idea of how it works and how it affects the world we live in today 
-        always fascinated me and I've always wanted to learn more as I am a very curious person. 
+    <p> I am a Computer Science student with a passion for sports, technology, and problem-solving games! My journey into software development was inspired by the film "The Social Network". This movie sparked my curiosity in coding, leading me to pursue Computer Science. The intriguing world of code, its impact on today's society, and a strong desire to learn more have always fascinated me.
         <br>
         <br>
-        Apart from Computer Science, I love travelling and exploring new cities and new cultures around the world. 
-        I have been to 20+ different countries - USA, UAE, Spain, Italy, Slovenia, Germany and many more. For me, 
-        it's the experience and memories, plus I love a good adventure.
-        <br>
-        <br>
-        I also try to stay active! I am a member of my local gym and also a member of my local football club.
-        I really enjoy sport as it has been a part of my life from a young age.
+        Beyond academics, I'm an avid traveler, having explored 20+ countries, including the USA, UAE, Spain, and Italy. Traveling offers me unforgettable experiences and adventures. Additionally, I'm committed to staying active, participating in local gym and football activities, as sports have been integral to my life from a young age..
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
@@ -89,7 +78,7 @@
         <h3> <span> Profession : </span> Software Developer/Engineer</h3>
         <h3> <span> Languages : </span> English, Romanian & German </h3>
         <h3> <span> Nationality : </span> Irish </h3>
-        <a href="https://drive.google.com/file/d/1M96dV_Bh68m9uGDvoK7avoh0ziYXDFun/view?usp=share_link" download="https://drive.google.com/file/d/1M96dV_Bh68m9uGDvoK7avoh0ziYXDFun/view?usp=share_link"><button class="btn"  style="color: #7800f8">View my CV<i class="fab fa-google-drive"></i> </button></a>
+        <a href="https://drive.google.com/file/d/1M96dV_Bh68m9uGDvoK7avoh0ziYXDFun/view?usp=share_link" download="https://drive.google.com/file/d/1M96dV_Bh68m9uGDvoK7avoh0ziYXDFun/view?usp=share_link"><button class="btn">View my CV<i class="fab fa-google-drive"></i> </button></a>
     </div>
 
     <div class="counter">
@@ -105,7 +94,7 @@
         <div class="box">
             <span>10+</span>
             <h3>Projects completed<br/><br/>
-                <a href="https://github.com/DJN2122" style="color: #7800f8; text-decoration: underline;">GitHub</a>
+                <a href="https://github.com/DJN2122" style="color: #1F51FF; text-decoration: underline;">GitHub</a>
             </h3>
         </div>
 
@@ -221,6 +210,20 @@
         <a href="https://github.com/DJN2122/Pygame-Space-Invader"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
     </div>
 
+    <div class="project-card">
+        <div class="card-image car-5"></div>
+        <h2>pending pending pending</h2>
+        <p>pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending</p>
+        <a href="https://github.com/DJN2122"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
+    </div>
+
+    <div class="project-card">
+        <div class="card-image car-6"></div>
+        <h2>pending pending pending</h2>
+        <p>pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending</p>
+        <a href="https://github.com/DJN2122"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
+    </div>
+
 </div>
 
     <h3 class="sub-heading">Some of my favourite places that I have visited!</h3>
@@ -272,8 +275,8 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fab fa-github"></i> <a href= "https://github.com/DJN2122" style="color: #7800f8"> Check out my GitHub! </a> </h3>
-            <h3> <i class="fab fa-linkedin-in"></i> <a href= "https://www.linkedin.com/in/david-n-308a9a134/" style="color: #7800f8"> Check out my LinkedIn! </a> </h3>
+            <h3> <i class="fab fa-github"></i> <a href= "https://github.com/DJN2122" style="color: #1F51FF"> Check out my GitHub! </a> </h3>
+            <h3> <i class="fab fa-linkedin-in"></i> <a href= "https://www.linkedin.com/in/david-n-308a9a134/" style="color: #1F51FF"> Check out my LinkedIn! </a> </h3>
             <h3> <i class="fas fa-envelope"></i> david_niculita@yahoo.com </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> Dublin, Ireland - GMT +00:00 </h3>
         </div>
