--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
 
     <div class="project-card">
         <div class="card-image car-5"></div>
-        <h2>pending pending pending</h2>
-        <p>pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending</p>
-        <a href="https://github.com/DJN2122"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
+        <h2>Live Diary - MSD Android Studio Project</h2>
+        <p>Developed in Java with Android Studio, My Live Diary app is a streamlined app for note-taking and diary entries, saved with titles, dates, and times for easy organization. Styled as digital sticky notes, it offers a visually appealing and engaging way to capture thoughts, activities, or memories, combining convenience with style.</p>
+        <a href="https://github.com/DJN2122/MSD-Assignment-"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
     </div>
 
     <div class="project-card">
