Added new project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>David Niculita</title>
 
     <link rel="icon" type="image/x-icon" href=".\images\favicon.ico">
 
@@ -219,8 +219,8 @@
 
     <div class="project-card">
         <div class="card-image car-6"></div>
-        <h2>pending pending pending</h2>
-        <p>pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending pending</p>
+        <h2>MedAssist - AI Medical Assistant</h2>
+        <p>pending pending pending pending pending pending pending pending</p>
         <a href="https://github.com/DJN2122"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
     </div>
 
