fixed styling issues

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="project-card">
         <div class="card-image car-6"></div>
         <h2>MedAssist - AI Medical Assistant</h2>
-        <p>pending pending pending pending pending pending pending pending</p>
+        <p>MedAssist, a health advice chatbot, leverages OpenAI's API to offer accessible health information. Users can query via text or speech-to-text, receiving advice and having responses read out loud. It generates downloadable medical reports and guides users to nearby healthcare facilities using real-time geolocation. Developed with MudBlazor, MedAssist combines AI with user-friendly design to improve healthcare accessibility.</p>
         <a href="https://github.com/DJN2122"><button class="card-btn">GitHub Repo <i class="fab fa-github"></i></button></a>
     </div>
 
